--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <!-- Nav Bar -->
 
-            <nav class="navbar navbar-expand-lg navbar-dark ">
+            <nav class="navbar fixed-top navbar-expand-lg navbar-dark ">
                 <a class="navbar-brand" href="#">Star Industries</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -60,7 +60,7 @@
 
             <div class="row">
                 <div class="col-lg-6">
-                    <h1>Meet new technology in the world.</h1>
+                    <h1 class="header-text">Meet new technology in the world.</h1>
                     <button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
                     <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
                 </div>
