--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <!-- Title -->
 
-            <div class="row">
+            <div class="row my-5">
                 <div class="col-lg-6">
                     <h1 class="header-text">Meet new technology in the world.</h1>
                     <button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
